[package]
authors = [
  "Vlad Semenov <vlad.semenov@iota.org>",
  "Dyrell Chapman <dyrell@demia.net>",
  "Brord van Wierst <brord@iota.org>",
  "Arnau Orriols <arnau.orriols@iota.org>",
]
description = "A Rust framework for developing cryptographic communication protocols"
edition = "2021"
keywords = ["iota", "LETS Framework", "LETS", "Streams", "Communication Protocol"]
license = "Apache-2.0/MIT"
name = "lets"
readme = "README.md"
version = "0.2.1"

[features]
default = ["utangle-client", "serde"]
std = ["spongos/std"]
# Enable the IOTA-Tangle transport client (implies `std` features)
tangle-client = ["iota-client", "futures", "serde", "iota-crypto/blake2b"]
# Enable the wasm-compatible IOTA-Tangle transport client (incompatile with `tangle-client` feature due to `iota-client/async` using `tokio`. Implies `std` feature)
tangle-client-wasm = ["iota-client", "futures"]
# Enable the Streams-specific uTangle Client
utangle-client = ["reqwest", "serde", "rayon", "iota-crypto/curl-p"]
# Enable bucket transport Client
bucket = ["spin"]
# Enable Iota Identity for use with Streams
did = ["identity_demia", "isocountry", "iota-client", "serde", "iota_stronghold", "iota-crypto/x25519-dalek", "hkdf"]
# Enable client for mysql,
mysql-client = ["sqlx", "std", "base64"]
# Error and serialization
serde = ["dep:serde"]

[dependencies]
# Local dependencies
# TODO: remove osrng feature once x25519 is not performed here
spongos = {path = "../spongos", default-features = false, features = ["osrng"]}

# IOTA dependencies
iota-crypto = {version = "0.23.1", default-features = false, features = ["x25519", "ed25519", "sha", "blake2b", "aes-gcm", "cipher", "serde", "random"]}
hkdf = {version = "0.12.3", optional = true}

# 3rd-party dependencies
anyhow = {version = "1.0", default-features = false}
async-trait = {version = "0.1", default-features = false}
hex = {version = "0.4", default-features = false}
prefix-hex = "0.7.0"

# Optional dependencies
futures = {version = "0.3.8", default-features = false, optional = true}
identity_demia = { git = "https://github.com/demia-protocol/demia-sdk", default-features = true, optional = true}
isocountry = { version = "0.3", optional = true }

iota-client = { git = "https://github.com/demia-protocol/demia-sdk", features = ["tls", "stronghold"], optional = true}
iota_stronghold = { git = "https://github.com/demia-protocol/demia-sdk", optional = true}

reqwest = {version = "0.11.11", optional = true, default-features = false, features = ["json", "rustls-tls"]}
serde = {version = "1.0", default-features = false, features = ["derive"], optional = true}
serde-big-array = { version = "0.4", default-features = false}
serde_json = {version = "1.0.81", default-features = false}
spin = {version = "0.9.2", default-features = false, features = ["mutex", "spin_mutex"], optional = true}
rayon = {version = "1.5.3", default-features = false, optional = true}
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "mysql", "macros", "chrono"], optional = true}
chrono = {version = "0.4.23", features = ["serde"]}
base64 = {version = "0.22.1", optional = true }
# Error
thiserror-no-std = {version = "2.0.2", default-features = false}

[dev-dependencies]
chrono = {version = "0.4.19", default-features = false, features = ["clock"]}
criterion = {version = "0.3.5", features = ["async_tokio", "html_reports"]}
tokio = {version = "1.19.2", default-features = false, features = ["macros"]}
spin = {version = "0.9.2", default-features = false, features = ["mutex", "spin_mutex"]}

[[bench]]
harness = false
name = "tangle_clients"
required-features = ["tangle-client", "utangle-client"]
